# prepare-data

./: .dockerignore  .env.sample  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-app.yml
app/: main.py
prepare_data/: bollard.py  building.py  coco_convert.py  light.py  main.py  road.py  tree.py  utils.py
prepare_data/.ipynb_checkpoints/: utils-checkpoint.py
tests/: conftest.py  fixture.py  test_bollard.py  test_building.py  test_convert.py  test_lights.py  test_main.py  test_road.py  test_trees.py
tests/data/: batiments_place_st_augustin_wall.json  bollards-st-augustin.json  les-arbres-st-augustin.json  les-routes-st-augustin.json  lights-st-augustin.json
tests/data/perception/Datasetdec85301-100a-427c-b32b-abd275296b36/: annotation_definitions.json  captures_000.json  captures_001.json  captures_002.json  coco_labels.json  metric_definitions.json  metrics_000.json  metrics_001.json  metrics_002.json  sensors.json
tests/data/perception/SemanticSegmentation353eafe8-4491-4a67-a828-b8484c7be7a9/: empty
